[gd_scene load_steps=4 format=3 uid="uid://bqgcg0bjt78gc"]

[ext_resource type="Script" uid="uid://wtlk5ik6jved" path="res://scenes/lobby/lobby.gd" id="1_ukx7c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jekxk"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6yme"]
bg_color = Color(0.139885, 0.3125, 0.0915527, 1)

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukx7c")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RoomNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 76
theme_override_styles/normal = SubResource("StyleBoxFlat_jekxk")
text = "RoomName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomIDLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 26
theme_override_font_sizes/italics_font_size = 26
theme_override_font_sizes/mono_font_size = 26
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_i6yme")
bbcode_enabled = true
text = " [b]ROOM ID:[/b]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 245
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 245
theme_override_constants/margin_bottom = 85

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerNamesCont" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 71
text = "Start"

[node name="PingBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 46
text = "Ping"

[node name="QuitLobbyBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 51
text = "Exit Lobby
"

[connection signal="gui_input" from="PanelContainer/MarginContainer/VBoxContainer/RoomIDLabel" to="." method="_on_room_id_label_gui_input"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/RoomIDLabel" to="." method="_on_room_id_label_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/RoomIDLabel" to="." method="_on_room_id_label_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/PingBtn" to="." method="_on_ping_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/QuitLobbyBtn" to="." method="_on_quit_lobby_btn_pressed"]
